--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
-./url/cleaned_urls.txt
-./output/metrics/metrics.json
+url/*
+
+# Ignore everything in output/metrics
+output/metrics/*
+
+# Don't ignore metrics folder
+!output/metrics/
